[gd_scene load_steps=4 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://ThumbDlg.gd" type="Script" id=2]
[ext_resource path="res://uploader.png" type="Texture" id=3]

[node name="CloudSync" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 425.0
margin_bottom = 597.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Downloader" type="HBoxContainer" parent="."]
margin_right = 75.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Download" type="Button" parent="Downloader"]
margin_right = 75.0
margin_bottom = 20.0
text = "Download"

[node name="Output" type="RichTextLabel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -490.0
margin_right = 426.0
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -371.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 364.0
margin_bottom = 593.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer"]
margin_right = 357.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 5

[node name="thumb" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 221.0
margin_right = 357.0
margin_bottom = 241.0
text = "Thumb"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 245.0
margin_right = 357.0
margin_bottom = 269.0

[node name="filePath" type="LineEdit" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 312.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false

[node name="file" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 316.0
margin_right = 357.0
margin_bottom = 24.0
text = "Data"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 273.0
margin_right = 357.0
margin_bottom = 297.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 36.0
margin_bottom = 19.0
text = "HASH"

[node name="MD5" type="LineEdit" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 40.0
margin_right = 357.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false
placeholder_text = "MD5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 301.0
margin_right = 357.0
margin_bottom = 325.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
margin_top = 5.0
margin_right = 15.0
margin_bottom = 19.0
text = "ID"

[node name="ID" type="LineEdit" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
margin_left = 19.0
margin_right = 357.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "001"
placeholder_text = "Art ID"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 329.0
margin_right = 357.0
margin_bottom = 333.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 438.0
margin_right = 357.0
margin_bottom = 452.0
size_flags_vertical = 6

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 558.0
margin_right = 357.0
margin_bottom = 562.0

[node name="Upload" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 566.0
margin_right = 357.0
margin_bottom = 586.0
text = "Upload"
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 726.0
margin_bottom = 522.0
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.asc" )
current_dir = "/home/nix/Project/Ascii/ArtUploader"
current_file = "Nix"
current_path = "/home/nix/Project/Ascii/ArtUploader/Nix"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThumbDlg" type="WindowDialog" parent="."]
margin_right = 624.0
margin_bottom = 431.0
popup_exclusive = true
window_title = "Select Thumb"
resizable = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="ThumbDlg"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 5
size_flags_vertical = 3
auto_height = true
max_columns = 6
same_column_width = true
icon_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Downloader/Download" to="." method="_on_Download_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/thumb" to="." method="_on_thumb_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/file" to="." method="_on_file_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Upload" to="." method="_on_Upload_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="select_file" from="ThumbDlg" to="." method="_on_ThumbDlg_select_file"]
[connection signal="item_activated" from="ThumbDlg/ItemList" to="ThumbDlg" method="_on_ItemList_item_activated"]
